<resources>
    <string name="app_name">Custom Batch SMS Sender And Event Planner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="action_dark_mode">Dark Mode</string>
    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>

    <string name="menu_home">Home</string>
    <string name="menu_slideshow">Settings</string>
    <string name="menu_message">Message</string>
    <string name="menu_events">Events</string>
    <string name="menu_report">Report</string>
    <string name="title_activity_event">EventActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
