<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_events">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.custombatchsmssenderandeventplanner.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_message"
        android:name="com.example.custombatchsmssenderandeventplanner.ui.event.MessageFragment"
        android:label="@string/menu_message"
        tools:layout="@layout/message_fragment" />

    <fragment
        android:id="@+id/nav_events"
        android:name="com.example.custombatchsmssenderandeventplanner.ui.events.EventsFragment"
        android:label="@string/menu_events"
        tools:layout="@layout/events_fragment" />

    <fragment
        android:id="@+id/nav_report"
        android:name="com.example.custombatchsmssenderandeventplanner.ui.Report.ReportFragment"
        android:label="Report"
        tools:layout="@layout/fragment_report" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.custombatchsmssenderandeventplanner.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.custombatchsmssenderandeventplanner.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>
